game-cluster/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: game-cluster-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: game-cluster.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: game-cluster
          servicePort: 8001
